2004-09-06  Darin Adler  <darin@apple.com>

        Reviewed by John.

        * kwq/DOM-CSS.mm: (-[DOMCSSStyleDeclaration description]): Use cssText in the description
        so it's easier to see in the debugger.

2004-09-06  Darin Adler  <darin@apple.com>

        Reviewed by John.

        * khtml/ecma/xmlhttprequest.cpp: (KJS::XMLHttpRequest::send): Remove uneeded QCString copy.

2004-09-04  Richard Williamson   <rjw@apple.com>

        Fix build problem on panther.

        * khtml/ecma/kjs_html.cpp:
        * khtml/rendering/render_canvasimage.h:

2004-09-03  David Hyatt  <hyatt@apple.com>

	Simple tweak to background-attachment.  Don't apply the slow repaint flag until after the whole style has been
	resolved, since while cascading someone may set the attachment to fixed but later override with scroll.

        * khtml/css/cssstyleselector.cpp:
        (khtml::CSSStyleSelector::adjustRenderStyle):
        (khtml::CSSStyleSelector::applyProperty):

2004-09-03  Richard Williamson   <rjw@apple.com>

	Fixed <rdar://problem/3781001>: redirection of URL via resource load delegate does not correctly set base URL for subsequent loads

	Ensure that stylesheets have the correct URL when request
	is redirected.

        Reviewed by Maciej.

        * khtml/misc/loader.cpp:
        (CachedCSSStyleSheet::checkNotify):
        * kwq/KWQLoader.h:
        * kwq/KWQLoader.mm:
        (KWQIsResponseURLEqualToURL):
        (KWQResponseURL):

        * khtml/ecma/kjs_html.cpp:
        (KJS::Context2DFunction::tryCall):
	Compare parameter count with == instead of <=.

2004-09-03  David Hyatt  <hyatt@apple.com>

	Fix for 3779083, deleting large amount of text is really slow.  Don't use NodeLists in editing remove commands.
	
        Reviewed by darin

        * khtml/editing/htmlediting_impl.cpp:
        (khtml::RemoveNodeCommandImpl::RemoveNodeCommandImpl):
        (khtml::RemoveNodePreservingChildrenCommandImpl::doApply):

2004-09-03  Darin Adler  <darin@apple.com>
